Use existing category with translation

--- a/app/views/partials/test/commands/line_items/delete_test.liquid
+++ b/app/views/partials/test/commands/line_items/delete_test.liquid
@@ -14,12 +14,12 @@
     "description": "item-description",
     "price":       10,
     "uuid":        "item.uuid",
-    "category":    "hoodies"
+    "category":    "jewellery"
   }
 {% endparse_json %}
 {% parse_json category_data %}
   {
-    "key": "hoodies"
+    "key": "jewellery"
   }
 {% endparse_json %}
 {% liquid
