Updated the buttons

--- a/app/views/partials/theme/simple/admin/users/index.liquid
+++ b/app/views/partials/theme/simple/admin/users/index.liquid
@@ -24,7 +24,7 @@
           <p class="text-sm">{{ 'admin.menu.users.uuid' | t }} {{ record.profile.uuid }}</p>
         </div>
         <div class="ml-auto">
-          <a class="mt button button-sm mt-2" href="/u/{{ record.profile.slug }}">
+          <a class="mt button button-small mt-2" href="/u/{{ record.profile.slug }}">
             {{ 'app.items.list' | t }}
           </a>
         </div>
