--- a/app/views/partials/theme/simple/home/quick_search_form.liquid
+++ b/app/views/partials/theme/simple/home/quick_search_form.liquid
@@ -9,5 +9,5 @@
     <input class="py-1 pl-10 pr-4 form-input" name="qkeyword" id="qkeyword" type="text" value="{{ qkeyword | raw_escape_string }}" placeholder="{% print 'app.quick_search.name' | t %}">
   </label>
 
-  <button name="submit" value="search" class="ml-3 button button-secondary button-sm">{{ 'app.search.search' | t  }}</button>
+  <button name="submit" value="search" class="ml-3 button button-secondary button-small">{{ 'app.search.search' | t  }}</button>
 </form>
