--- a/app/views/partials/theme/simple/layout/header.liquid
+++ b/app/views/partials/theme/simple/layout/header.liquid
@@ -50,7 +50,7 @@
                     </div>
                 </div>
             {% else %}
-                <a href="/sessions/new" class="ml-3 button button-sm">
+                <a href="/sessions/new" class="ml-3 button button-small">
                     {{ 'app.login' | t }}
                 </a>
             {% endif %}
