--- a/app/views/pages/style-guide.html.liquid
+++ b/app/views/pages/style-guide.html.liquid
@@ -237,20 +237,131 @@
             <dt>Color:</dt>
             <dd class="font-mono styleGuide-color"></dd>
           </div>
-          <div>
-            <dt>Font:</dt>
-            <dd class="font-mono styleGuide-font"></dd>
-          </div>
-          <div>
-            <dt>Size:</dt>
-            <dd class="font-mono styleGuide-size"></dd>
-          </div>
         </dl>
       </section>
       <section class="w-1/3 p-5 flex items-center border styleGuide-example">
         <a href="http://platformos.com/">Sample link</a>
       </section>
     </div>
+
+    <div class="mt-16 flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Buttons' %}
+        <dl class="table">
+          <div class="table-row">
+            <dt class="table-cell">Class:</dt>
+            <dd class="table-cell pl-4 font-mono">button</dd>
+          </div>
+          <div class="table-row">
+            <dt class="table-cell">Modifiers:</dt>
+            <dt class="table-cell pl-4 font-mono">button-disabled</dt>
+          </div>
+        </dl>
+      </section>
+      <section class="w-1/3">
+        <div class="p-5 flex flex-wrap items-center justify-center space-x-1 border">
+          <button class="button">Button</button>
+          <a href="http://platformos.com" class="button">Link</a>
+        </div>
+        <div class="mt-2 p-5 flex flex-wrap items-center justify-center space-x-1 border">
+          <button class="button" disabled>Disabled</button>
+          <a href="http://platformos.com" class="button button-disabled">Link disabled</a>
+        </div>
+      </section>
+    </div>
+
+    <div class="mt-16 flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Secondary buttons' %}
+        <dl class="table">
+          <div class="table-row">
+            <dt class="table-cell">Class:</dt>
+            <dd class="table-cell pl-4 font-mono">button button-secondary</dd>
+          </div>
+          <div class="table-row">
+            <dt class="table-cell">Modifiers:</dt>
+            <dt class="table-cell pl-4 font-mono">button-disabled</dt>
+          </div>
+        </dl>
+      </section>
+      <section class="w-1/3">
+        <div class="p-5 flex flex-wrap items-center justify-center space-x-1 border">
+          <button class="button button-secondary">Button</button>
+          <a href="http://platformos.com" class="button button-secondary">Link</a>
+        </div>
+        <div class="mt-2 p-5 flex flex-wrap items-center justify-center space-x-1 border">
+          <button class="button button-secondary" disabled>Disabled</button>
+          <a href="http://platformos.com" class="button button-disabled button-secondary">Link disabled</a>
+        </div>
+      </section>
+    </div>
+
+    <div class="mt-16 flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Danger buttons' %}
+        <dl class="table">
+          <div class="table-row">
+            <dt class="table-cell">Class:</dt>
+            <dd class="table-cell pl-4 font-mono">button button-danger</dd>
+          </div>
+          <div class="table-row">
+            <dt class="table-cell">Modifiers:</dt>
+            <dt class="table-cell pl-4 font-mono">button-disabled</dt>
+          </div>
+        </dl>
+      </section>
+      <section class="w-1/3">
+        <div class="p-5 flex flex-wrap items-center justify-center space-x-1 border">
+          <button class="button button-danger">Button</button>
+          <a href="http://platformos.com" class="button button-danger">Link</a>
+        </div>
+        <div class="mt-2 p-5 flex flex-wrap items-center justify-center space-x-1 border">
+          <button class="button button-danger" disabled>Disabled</button>
+          <a href="http://platformos.com" class="button button-disabled button-danger">Link disabled</a>
+        </div>
+      </section>
+    </div>
+
+    <div class="mt-16 flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Small buttons' %}
+        <dl class="table">
+          <div class="table-row">
+            <dt class="table-cell">Class:</dt>
+            <dd class="table-cell pl-4 font-mono">button button-small</dd>
+          </div>
+          <div class="table-row">
+            <dt class="table-cell">Modifiers:</dt>
+            <dt class="table-cell pl-4 font-mono">button-disabled</dt>
+          </div>
+        </dl>
+      </section>
+      <section class="w-1/3 p-5 flex items-center justify-center space-x-1 border styleGuide-example">
+        <button class="button button-small">Button</button>
+        <a href="http://platformos.com" class="button button-small">Link</a>
+      </section>
+    </div>
+
+    <div class="mt-16 flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Small secondary buttons' %}
+        <dl class="table">
+          <div class="table-row">
+            <dt class="table-cell">Class:</dt>
+            <dd class="table-cell pl-4 font-mono">button button-secondary button-small</dd>
+          </div>
+          <div class="table-row">
+            <dt class="table-cell">Modifiers:</dt>
+            <dt class="table-cell pl-4 font-mono">button-disabled</dt>
+          </div>
+        </dl>
+      </section>
+      <section class="w-1/3 p-5 flex items-center justify-center space-x-1 border styleGuide-example">
+        <button class="button button-secondary button-small">Button</button>
+        <a href="http://platformos.com" class="button button-secondary button-small">Link</a>
+      </section>
+    </div>
+
   </article>
 
 
