--- a/app/views/partials/theme/simple/dashboard/orders/actions.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/actions.liquid
@@ -5,7 +5,7 @@
       <input type="hidden" name="status" value="app.statuses.orders.paid"/>
       <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
-      <button class="button button-sm">{{ 'app.mark-as-paid' | t }}</button>
+      <button class="button button-small">{{ 'app.mark-as-paid' | t }}</button>
     </form>
   {% endif %}
 
@@ -15,10 +15,10 @@
       <input type="hidden" name="status" value="app.statuses.orders.paid"/>
       <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
-      <button class="button button-sm">{{ 'app.pay' | t }}</button>
+      <button class="button button-small">{{ 'app.pay' | t }}</button>
     </form>
 
-    <a href="/orders/review?order_id={{order.id}}" class="button button-sm mt-2">
+    <a href="/orders/review?order_id={{order.id}}" class="button button-small mt-2">
       {{ 'app.pay_online' | t }}
     </a>
   {% endif %}
@@ -30,7 +30,7 @@
     <input type="hidden" name="status" value="app.statuses.orders.canceled"/>
     <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
-    <button class="button button-sm button-secondary">{{ 'app.cancel' | t }}</button>
+    <button class="button button-small button-secondary">{{ 'app.cancel' | t }}</button>
   </form>
 {% endif %}
 
@@ -40,7 +40,7 @@
     <input type="hidden" name="status" value="app.statuses.orders.shipped"/>
     <input type="hidden" name="order_id" value="{{ order.id }}"/>
 
-    <button class="button button-sm button-secondary">{{ 'app.ship' | t }}</button>
+    <button class="button button-small button-secondary">{{ 'app.ship' | t }}</button>
   </form>
 {% endif %}
 
