--- a/app/views/partials/theme/simple/dashboard/orders/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/orders/index.liquid
@@ -60,7 +60,7 @@
         </div>
 
         <div class="mt-2 lg:mt-0 lg:pl-2 lg:py-4 lg:table-cell lg:border-t lg:text-right">
-          <a href="/dashboard/buy/orders_checkout/{{order.id}}" class="button button-sm">
+          <a href="/dashboard/buy/orders_checkout/{{order.id}}" class="button button-small">
             {{ 'app.checkout' | t }}
           </a>
           {% liquid
