--- a/app/views/partials/theme/simple/statuses/quick_form.liquid
+++ b/app/views/partials/theme/simple/statuses/quick_form.liquid
@@ -5,5 +5,5 @@
   <input type="hidden" name="status[object_id]" value="{{ object_id }}"/>
   <input type="hidden" name="return_to" value="{{ return_to }}"/>
 
-  <button class="button button-sm {% if secondary %}button-secondary{% endif %}">{{ label | t }}</button>
+  <button class="button button-small {% if secondary %}button-secondary{% endif %}">{{ label | t }}</button>
 </form>
