Questions: fixes - edit own post, default avatar

--- a/app/views/partials/theme/simple/dashboard/posts/index.liquid
+++ b/app/views/partials/theme/simple/dashboard/posts/index.liquid
@@ -55,7 +55,7 @@
                   <input type="hidden" name="_method" value="delete" />
                   <input type="hidden" name="id" value="{{ post.id }}">
 
-                  <button id="deletebutton" class="button button-secondary">{{ 'app.models.shared.delete' | t }}</button>
+                  <button id="deletebutton" class="button button-warning">{{ 'app.models.shared.delete' | t }}</button>
                 </form>
               </td>
             </tr>
