--- a/app/views/partials/theme/simple/dashboard/posts/reply.liquid
+++ b/app/views/partials/theme/simple/dashboard/posts/reply.liquid
@@ -8,12 +8,11 @@
       <input type="hidden" name="post[id]" value="{{ object.id }}" />
     {% endif %}
 
-    <div class="mt-5">
+    <div class="my-5">
       <label class="block" for="body">{{ 'app.models.posts.your_answer' | t }}</label>
       <textarea class="w-2/3 form-input" id="body" name="post[body]" data-markdown-editor>{{ object.body }}</textarea>
       {% render 'theme/simple/field_error', errors: object.errors.body %}
     </div>
-
     <button class="button">{{ 'app.models.posts.post_answer' | t }}</button>
   </form>
 </div>
