--- a/app/views/partials/theme/simple/posts/card.liquid
+++ b/app/views/partials/theme/simple/posts/card.liquid
@@ -5,7 +5,13 @@
   <div class="flex items-start px-4 py-6 w-full">
     <div class="flex flex-col items-center pr-4">
       <a href="{{ creator_url }}">
-        <img class="w-12 h-12 rounded-full object-cover mb-5 shadow" src="{{ post.creator.avatar.photo.versions.tiny }}" alt="avatar">
+        {% liquid
+          assign img_url = post.creator.avatar.photo.versions.tiny
+          unless img_url
+            assign img_url = 'images/user.svg' | asset_url
+          endunless
+        %}
+        <img class="w-12 h-12 rounded-full object-cover mb-5 shadow" src="{{ img_url }}" alt="avatar">
       </a>
       {% include 'theme/simple/posts/vote_box', post: post, current_profile: current_profile, root_post: root_post %}
     </div>
@@ -33,6 +39,11 @@
                </div> -->
         </div>
         <span>
+          {% if root_post.creator.id == current_profile.id %}
+            <a href="/dashboard/posts/edit?id={{ post.id }}" class="pr-5">
+              {{ 'app.models.posts.edit' | t }}
+            </a>
+          {% endif %}
           {% for tag in post.tags %}
             <a class="px-2 py-1 bg-gray-200 text-gray-100 rounded hover:bg-gray-400" href="/posts?tag={{tag}}">{{tag}}</a>
           {% endfor %}
