--- a/src/css/components.css
+++ b/src/css/components.css
@@ -1,3 +1,4 @@
 @import "./components/button.css";
+@import "./components/card.css";
 @import "./components/gallery.css";
 @import "./components/markdown.css";
