--- a/app/views/pages/style-guide.html.liquid
+++ b/app/views/pages/style-guide.html.liquid
@@ -196,6 +196,10 @@
         {% render 'theme/simple/ui/subtitle', label: 'Sidenotes' %}
         <dl class="table">
           <div class="table-row">
+            <dt class="pr-5 table-cell">Class:</dt>
+            <dd class="table-cell font-mono">sidenote</dd>
+          </div>
+          <div class="table-row">
             <dt class="pr-5 table-cell">Color:</dt>
             <dd class="table-cell font-mono styleGuide-color"></dd>
           </div>
@@ -208,18 +212,9 @@
             <dd class="table-cell font-mono styleGuide-size"></dd>
           </div>
         </dl>
-        <div class="mt-5 p-5 border bg-white font-mono styleGuide-code">
-          {% raw %}{% render 'theme/simple/ui/sidenote', label: 'Example sidenote' %}{% endraw %}
-          <button class="float-right styleGuide-copy" title="Copy to clipboard">
-            <svg width="24" height="24" class="text-gray-700" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd" d="M16.5 21.75C16.5 22.5784 15.8284 23.25 15 23.25H4.5C3.67157 23.25 3 22.5784 3 21.75V8.25C3 7.42157 3.67157 6.75 4.5 6.75H12.129C12.5265 6.75008 12.9078 6.90798 13.189 7.189L16.061 10.061C16.342 10.3422 16.4999 10.7235 16.5 11.121V21.75Z" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-              <path d="M7.5 6.75V2.25C7.5 1.42157 8.17157 0.75 9 0.75H16.629C17.0265 0.750085 17.4078 0.907982 17.689 1.189L20.561 4.061C20.842 4.3422 20.9999 4.72345 21 5.121V15.75C21 16.5784 20.3284 17.25 19.5 17.25H16.5" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
-            </svg>
-          </button>
-        </div>
       </section>
       <section class="w-1/3 p-5 flex items-center border styleGuide-example">
-        {% render 'theme/simple/ui/sidenote', label: 'Example sidenote' %}
+        <span class="sidenote">Example sidenote</span>
       </section>
     </div>
   </article>
@@ -364,6 +359,96 @@
 
   </article>
 
+  <article id="styleGuide-forms" class="mt-20">
+    <header>
+      {% render 'theme/simple/ui/title', label: 'Forms' %}
+    </header>
 
+    <div class="flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Checkboxes' %}
+      </section>
+      <section class="w-1/3 p-5 border styleGuide-example">
+        <fieldset>
+          <input type="checkbox" id="styleGuide-checkbox-a"> <label for="styleGuide-checkbox-a">Test checkbox</label>
+        </fieldset>
+        <fieldset>
+          <input type="checkbox" disabled id="styleGuide-checkbox-b"> <label for="styleGuide-checkbox-b">Disabled checkbox</label>
+        </fieldset>
+      </section>
+    </div>
+
+    <div class="mt-16 flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Radios' %}
+      </section>
+      <section class="w-1/3 p-5 border styleGuide-example">
+        <fieldset>
+          <input type="radio" name="styleGuide-radio" id="styleGuide-radio-a"> <label for="styleGuide-radio-a">Radio</label>
+        </fieldset>
+        <fieldset>
+          <input type="radio" name="styleGuide-radio" disabled id="styleGuide-radio-b"> <label for="styleGuide-radio-a">Disabled radio</label>
+        </fieldset>
+      </section>
+    </div>
+
+    <div class="mt-16 flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Text inputs' %}
+      </section>
+      <section class="w-1/3 p-5 border styleGuide-example">
+        <fieldset>
+          <input type="text" placeholder="Text input">
+        </fieldset>
+        <fieldset class="mt-1">
+          <input type="text" disabled placeholder="Disabled input">
+        </fieldset>
+      </section>
+    </div>
+
+    <div class="mt-16 flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Selects' %}
+      </section>
+      <section class="w-1/3 p-5 border styleGuide-example">
+        <select>
+          <option>Option A</option>
+          <option>Option B</option>
+          <option>Option C</option>
+          <option>Option D</option>
+        </select>
+      </section>
+    </div>
+  </article>
+
+  <article id="styleGuide-boxes" class="mt-20">
+    <header>
+      {% render 'theme/simple/ui/title', label: 'Boxes' %}
+    </header>
+
+    <div class="flex gap-10">
+      <section class="w-2/3">
+        {% render 'theme/simple/ui/subtitle', label: 'Card' %}
+        <dl class="table">
+          <div class="table-row">
+            <dt class="table-cell">Class:</dt>
+            <dd class="table-cell pl-4 font-mono">card</dd>
+          </div>
+        </dl>
+      </section>
+      <section class="w-1/3 p-5 border styleGuide-example">
+        <fieldset class="mt-1">
+          <div class="card">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis ex orci, molestie vitae dolor pretium, tristique fringilla dui. Phasellus luctus at sapien eget ornare. Maecenas faucibus condimentum lacinia. Quisque blandit iaculis commodo. Cras in congue massa, nec auctor ante. Morbi fermentum quam ut ante volutpat convallis.
+          </div>
+        </fieldset>
+      </section>
+    </div>
+  </article>
+
+  <article id="styleGuide-navigation" class="mt-20">
+    <header>
+      {% render 'theme/simple/ui/title', label: 'Navigation elements' %}
+    </header>
 
 </section>
