--- a/app/views/pages/style-guide.html.liquid
+++ b/app/views/pages/style-guide.html.liquid
@@ -119,6 +119,10 @@
             <dt class="pr-5 table-cell">Size:</dt>
             <dd class="table-cell font-mono styleGuide-size"></dd>
           </div>
+          <div class="table-row">
+            <dt class="pr-5 table-cell">Line height:</dt>
+            <dd class="table-cell font-mono styleGuide-lineHeight"></dd>
+          </div>
         </dl>
       </section>
       <section class="w-1/3 p-5 border styleGuide-example">
@@ -142,6 +146,10 @@
           <div class="table-row">
             <dt class="pr-5 table-cell">Size:</dt>
             <dd class="table-cell font-mono styleGuide-size"></dd>
+          </div>
+          <div class="table-row">
+            <dt class="pr-5 table-cell">Line height:</dt>
+            <dd class="table-cell font-mono styleGuide-lineHeight"></dd>
           </div>
         </dl>
         <div class="mt-5 p-5 border bg-white font-mono styleGuide-code">
@@ -174,6 +182,10 @@
           <div class="table-row">
             <dt class="pr-5 table-cell">Size:</dt>
             <dd class="table-cell font-mono styleGuide-size"></dd>
+          </div>
+          <div class="table-row">
+            <dt class="pr-5 table-cell">Line height:</dt>
+            <dd class="table-cell font-mono styleGuide-lineHeight"></dd>
           </div>
         </dl>
         <div class="mt-5 p-5 border bg-white font-mono styleGuide-code">
@@ -210,6 +222,10 @@
           <div class="table-row">
             <dt class="table-cell">Size:</dt>
             <dd class="table-cell font-mono styleGuide-size"></dd>
+          </div>
+          <div class="table-row">
+            <dt class="pr-5 table-cell">Line height:</dt>
+            <dd class="table-cell font-mono styleGuide-lineHeight"></dd>
           </div>
         </dl>
       </section>
