--- a/app/views/partials/theme/simple/posts/card.liquid
+++ b/app/views/partials/theme/simple/posts/card.liquid
@@ -45,7 +45,7 @@
             </a>
           {% endif %}
           {% for tag in post.tags %}
-            <a class="px-2 py-1 bg-gray-200 text-gray-100 rounded hover:bg-gray-400" href="/posts?tag={{tag}}">{{tag}}</a>
+            <a class="px-2 py-1 bg-gray-200 text-blue-400 rounded hover:bg-gray-400" href="/posts?tag={{tag}}">{{tag}}</a>
           {% endfor %}
         </span>
       </div>
