--- a/app/views/partials/theme/simple/posts/index.liquid
+++ b/app/views/partials/theme/simple/posts/index.liquid
@@ -4,7 +4,12 @@
       {{ 'app.models.posts.add' | t }}
     </a>
   </div>
-
+  {% liquid
+    if context.params.tag
+      assign title = 'app.models.posts.questions-tagged-by' | t: tag: context.params.tag
+      render 'theme/simple/ui/title', label: title
+    endif
+  %}
   {% for post in posts.results %}
     {% liquid
       function post_path = 'link_to', post: post
@@ -28,7 +33,7 @@
             <span class="font-light text-gray-600">{{post.created_at | l: 'compact'}}</span>
             <span>
               {% for tag in post.tags %}
-                <a class="px-2 py-1 bg-gray-200 text-gray-100 rounded hover:bg-gray-400" href="#">{{tag}}</a>
+                <a class="px-2 py-1 bg-gray-200 text-blue-400 rounded hover:bg-gray-400" href="/posts?tag={{tag}}">{{tag}}</a>
               {% endfor %}
             </span>
           </div>
