--- a/app/views/pages/dashboard/groups/new.liquid
+++ b/app/views/pages/dashboard/groups/new.liquid
@@ -1,15 +1,18 @@
 ---
 metadata:
   breadcrumbs:
-    - url: /dashboard/groups
-      label: app.groups.list
+    - label: app.dashboard
+      url: /dashboard
+    - label: app.groups.list
+      url: /dashboard/groups
     - label: app.groups.new
 ---
+
 {% liquid
   include 'lib/must_be_authenticated'
 
   function presigned_url = 'lib/queries/presigned_url'
 
-  include 'theme/simple/dashboard/breadcrumbs', name: 'groups', total_entries: groups.total_entries, role: 'community'
+  render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs
   include 'theme/simple/dashboard/groups/new', presigned_url: presigned_url, user: context.current_user
 %}
