--- a/app/views/pages/dashboard/items/new.liquid
+++ b/app/views/pages/dashboard/items/new.liquid
@@ -1,16 +1,19 @@
 ---
 metadata:
   breadcrumbs:
-    - url: /dashboard/sell/items
-      label: app.items.list
+    - label: app.dashboard
+      url: /dashboard
+    - label: app.items.list
+      url: /dashboard/sell/items
     - label: app.new
 ---
+
 {% liquid
 
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
   function filters = 'lib/queries/search/filters', query: context.params
   function presigned_url = 'lib/queries/presigned_url'
 
-  include 'theme/simple/dashboard/breadcrumbs'
+  render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs
   include 'theme/simple/items/new', lib: filters, presigned_url: presigned_url, user: context.current_user
 %}
