--- a/app/views/pages/dashboard/payments/account.liquid
+++ b/app/views/pages/dashboard/payments/account.liquid
@@ -1,13 +1,17 @@
 ---
 metadata:
   breadcrumbs:
+    - label: app.dashboard
+      url: /dashboard
     - label: app.payments.account.bank_account
 ---
+
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
   function account = 'modules/stripe/lib/payments/account', user_id: context.current_user.id
 
-  include 'theme/simple/dashboard/breadcrumbs'
+  render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs
+
   if account.id
     include 'theme/simple/payments/account/show', account: account
   else
