--- a/app/views/pages/dashboard/posts/index.liquid
+++ b/app/views/pages/dashboard/posts/index.liquid
@@ -1,13 +1,17 @@
 ---
 metadata:
   breadcrumbs:
-    - url: /dashboard/posts
-      label: app.models.posts.list
+    - label: app.dashboard
+      url: /dashboard
+    - label: app.models.posts.list
+      url: /dashboard/posts
+
 ---
+
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
   function posts = 'lib/queries/posts/search', limit: 100, parent_id_exists: false, creator_id: current_profile.id
 
-  include 'theme/simple/dashboard/breadcrumbs', total_entries: posts.total_entries
+  render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs, value: posts.total_entries
   include 'theme/simple/dashboard/posts/index', posts: posts
 %}
