--- a/app/views/pages/dashboard/sell/items/index.liquid
+++ b/app/views/pages/dashboard/sell/items/index.liquid
@@ -1,15 +1,19 @@
 ---
 metadata:
   breadcrumbs:
+    - label: app.dashboard
+      url: /dashboard
     - label: app.items.list
 ---
+
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
   function items = 'lib/queries/items/search', limit: 20, owner: current_profile.id, params: context.params, withStatuses: true
   function filters = 'lib/queries/search/filters', query: context.params
 
-  include 'theme/simple/dashboard/breadcrumbs', name: 'items', total_entries: items.total_entries, role: 'seller'
+
+  render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs, value: items.items.total_entries
   include 'theme/simple/dashboard/items/index', items: items, role: 'seller', filters: filters
 
   render 'theme/simple/dashboard/items/item-status-object.js', authenticity_token: context.authenticity_token
