rename-models-to-records part 2

--- a/app/views/pages/profile/index.liquid
+++ b/app/views/pages/profile/index.liquid
@@ -36,7 +36,7 @@ slug: profile
   endif
 
   graphql conversation = 'modules/chat/find_conversation', from_id: current_profile.id, to_id: profile.id
-  graphql messages = 'modules/chat/find_messages', conversation_id: conversation.models.results.first.id
+  graphql messages = 'modules/chat/find_messages', conversation_id: conversation.records.results.first.id
   assign chat_enabled = context.constants.USE_WEBSOCKET_CHAT
 
   render 'theme/simple/profile/show', section: section, user: profile, list: list, current_profile: current_profile, conversation: conversation, messages: messages, chat_enabled: chat_enabled
