--- a/app/views/partials/lib/queries/activities/users/audience.liquid
+++ b/app/views/partials/lib/queries/activities/users/audience.liquid
@@ -8,7 +8,7 @@
 
   log r, type: 'showme'
 
-  assign ids = r.models.results | map: 'l_id'
+  assign ids = r.records.results | map: 'l_id'
 
   return ids
 %}
