--- a/modules/chat/public/views/pages/inbox.html.liquid
+++ b/modules/chat/public/views/pages/inbox.html.liquid
@@ -18,7 +18,7 @@ slug: inbox
 	endif
 
 	graphql conversations = 'modules/chat/inbox', user_id: current_user.id
-	assign current_conversation = conversations.models.results | where: "id", active_conversation | first | default: conversations.models.results.first
+	assign current_conversation = conversations.records.results | where: "id", active_conversation | first | default: conversations.records.results.first
 	graphql messages = 'modules/chat/find_messages', conversation_id: current_conversation.id, page: 1, per_page: 30
 
 	if current_conversation != blank
