--- a/modules/chat/public/views/partials/theme/json/messages/show.liquid
+++ b/modules/chat/public/views/partials/theme/json/messages/show.liquid
@@ -1,5 +1,5 @@
-{% if messages.models.results[0] %}
-  {% if messages.models.results[0].from_id == current_user_id or messages.models.results[0].to_id == current_user_id %}
+{% if messages.records.results[0] %}
+  {% if messages.records.results[0].from_id == current_user_id or messages.records.results[0].to_id == current_user_id %}
     {{ messages.models | json }}
   {% else %}
     {% response_status 403 %}
