--- a/app/views/partials/theme/simple/dashboard/sidebar.liquid
+++ b/app/views/partials/theme/simple/dashboard/sidebar.liquid
@@ -17,7 +17,7 @@
         <span class="ml-4 font-medium">{{ 'app.p-dashboard.chat' | t }}</span>
       </span>
 
-      {% include 'theme/simple/dashboard/sidebar_link', href: "/dashboard/inbox", label: 'app.p-dashboard.inbox' %}
+      {% include 'theme/simple/dashboard/sidebar_link', href: "/inbox", label: 'app.p-dashboard.inbox' %}
     </div>
 
     <div class="mb-5">
