--- a/app/views/pages/dashboard/groups/edit.liquid
+++ b/app/views/pages/dashboard/groups/edit.liquid
@@ -11,7 +11,8 @@ metadata:
 {% liquid
 
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
-  function group = 'lib/queries/groups/find', id: context.params.id, owner_id: current_profile.id
+  function group = 'lib/queries/groups/find', id: context.params.id, owner_id: current_profile.id, relation_name: 'owner'
+  include 'lib/present_or_404', property:  group.id
   function presigned_url = 'lib/queries/presigned_url'
 
   include 'lib/can_edit_group', profile_id: current_profile.id, group: group
