--- a/app/views/pages/dashboard/groups/index.liquid
+++ b/app/views/pages/dashboard/groups/index.liquid
@@ -8,7 +8,7 @@ metadata:
 {% liquid
   function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
 
-  function groups = 'lib/queries/groups/search', limit: 100, owner_id: current_profile.id
+  function groups = 'lib/queries/groups/search', limit: 100, owner_id: current_profile.id, relation_name: 'owner'
 
   render 'theme/simple/ui/breadcrumbs', breadcrumbs: context.page.metadata.breadcrumbs, value: groups.total_entries
   include 'theme/simple/dashboard/groups/index', groups: groups
