--- a/app/views/pages/dashboard/groups/update.liquid
+++ b/app/views/pages/dashboard/groups/update.liquid
@@ -3,7 +3,9 @@ slug: dashboard/groups
 method: put
 ---
 {% liquid
-  include 'lib/must_be_authenticated'
+  function current_profile = 'lib/current_profile', user_id: context.current_user.id, required: true
+  function group = 'lib/queries/groups/find', id: context.params.id, owner_id: current_profile.id, relation_name: 'owner'
+  include 'lib/present_or_404', property:  group.id
 
   function object = 'lib/commands/call', object: context.params.group, command: 'groups/update', selection: 'model_update'
   if object.valid
