--- a/app/views/pages/quick_search/index.liquid
+++ b/app/views/pages/quick_search/index.liquid
@@ -1,5 +1,5 @@
 {% liquid
-  function models = 'lib/queries/models/search', keyword: context.params.qkeyword, limit: 15
+  function records = 'lib/queries/models/search', keyword: context.params.qkeyword, limit: 15
 
-  render 'theme/simple/quick_search/index', models: models
+  render 'theme/simple/quick_search/index', records: records
 %}
