--- a/app/views/partials/lib/queries/metrics/find.liquid
+++ b/app/views/partials/lib/queries/metrics/find.liquid
@@ -1,5 +1,5 @@
 {% liquid
   graphql r  = 'metrics/search', limit: 1, date: date
 
-  return r.records.results.first
+  return r.models.results.first
 %}
