--- a/app/views/partials/lib/queries/profiles/find.liquid
+++ b/app/views/partials/lib/queries/profiles/find.liquid
@@ -12,5 +12,5 @@
   graphql r  = 'profiles/search', limit: 1, uuid: uuid, slug: slug, id: id, user_id: user_id, followships: followships, membership: membership
   include 'lib/handle_graphql_response', r: r, name: 'queries/profiles/find'
 
-  return r.records.results.first
+  return r.models.results.first
 %}
