--- a/modules/chat/public/views/partials/message_button.liquid
+++ b/modules/chat/public/views/partials/message_button.liquid
@@ -1,8 +1,8 @@
 {% liquid
   assign template = '?active_conversation={conversation_id}&from_id={from_id}&to_id={to_id}'
 
-  if conversation.records.results[0].id
-    assign params = template | expand_url_template: conversation_id: conversation.records.results[0].id
+  if conversation.models.results[0].id
+    assign params = template | expand_url_template: conversation_id: conversation.models.results[0].id
   else
     assign params = template | expand_url_template: conversation_id: 'new', from_id: current_profile.id, to_id: user.id
   endif
