--- a/app/views/pages/dashboard/posts/accept.liquid
+++ b/app/views/pages/dashboard/posts/accept.liquid
@@ -9,7 +9,6 @@ method: post
 
   function object = 'lib/commands/posts/accept', object: context.params.post, current_profile: current_profile, post: post
 
-  assign root_post = object.parent_id
   if object.valid
     if object.accepted_post_id
       include 'lib/commands/events/create', type: 'post_anwser_accepted', actor_id: current_profile.id, object_id: object.id
@@ -17,9 +16,9 @@ method: post
       include 'lib/commands/events/create', type: 'post_anwser_cleared', actor_id: current_profile.id, object_id: object.id
     endif
 
-    function url = 'link_to', post: root_post
+    function url = 'link_to', post: post
     redirect_to url
   else
-    include 'theme/simple/posts/show', root_post: root_post, object: object
+    include 'theme/simple/posts/show', root_post: post, object: object
   endif
 %}
