--- a/app/views/partials/lib/queries/models/search.liquid
+++ b/app/views/partials/lib/queries/models/search.liquid
@@ -2,5 +2,5 @@
   graphql r = 'models/search', keyword: keyword
   include 'lib/handle_graphql_response', r: r, name: 'queries/models/search'
 
-  return r.models
+  return r.records
 %}
