--- a/app/views/partials/lib/queries/profiles/search.liquid
+++ b/app/views/partials/lib/queries/profiles/search.liquid
@@ -2,5 +2,5 @@
   graphql r = 'profiles/search', limit: limit, uuid: uuid, id: id, slug: slug, user_id: user_id
   include 'lib/handle_graphql_response', r: r, name: 'queries/profiles/search'
 
-  return r.models
+  return r.records
 %}
