--- a/app/views/partials/lib/queries/relationships/search.liquid
+++ b/app/views/partials/lib/queries/relationships/search.liquid
@@ -6,5 +6,5 @@
   graphql r = 'relationships/search', limit: limit, name: name, l_id: l_id, r_id: r_id
   include 'lib/handle_graphql_response', r: r, name: 'queries/relationships/search'
 
-  return r.models
+  return r.records
 %}
