Fix search for questions

--- a/app/views/partials/f_link_to.liquid
+++ b/app/views/partials/f_link_to.liquid
@@ -16,7 +16,8 @@
 
   when 'comment'
     return "/comments/" | append: object.id
-
+  when 'post'
+    return "/posts/show/" | append: object.id
   else
     return null
   endcase
